# splade-es

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh  run_task.py  splade_encode.py
conf/: logging.ini  param.ini
splade_es/: utils.py
splade_es/dataset/: __init__.py  base.py  beir.py
splade_es/model/: __init__.py  base.py  bm25.py  splade.py
splade_es/tasks/: analyze.py  base.py  bm25.py  evaluate.py  splade.py  splade_doc.py  splade_phrase.py
src/dataset/: __init__.py  beir.py
src/model/: __init__.py  base.py  bm25.py  splade.py
